# XCursorMorph

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  ctool  readme.md  run
assets/: assets.qrc
assets/icons/: scan-white-gif-krita.kra  scan-white-gif-krita.kra~
source/: lib.cpp  lib.hpp  main.cpp  types.hpp
source/controllers/: base-controller.hpp  main-controller.cpp  main-controller.hpp
source/controllers/screens/: select-folder-controller.cpp  select-folder-controller.hpp
source/controllers/stages/: extract-stage-controller.cpp  extract-stage-controller.hpp  scan-stage-controller.cpp  scan-stage-controller.hpp
source/exceptions/: xerror.cpp  xerror.hpp
source/meta/: meta.conf.hpp
source/models/: animated-cursor.cpp  animated-cursor.hpp  chunk.hpp  cursor-entry.cpp  cursor-entry.hpp  serializer.hpp  state.cpp  state.hpp  static-cursor.cpp  static-cursor.hpp
source/models/formats/: ani.cpp  ani.hpp  animated-cursor.cpp  animated-cursor.hpp  bmp.cpp  bmp.hpp  cur-ico.cpp  cur-ico.hpp  cursor-entry.cpp  ientry.hpp  static-cursor.cpp  static-cursor.hpp
source/models/structs/: chunk.cpp  chunk.hpp  serializer.hpp
source/views/: main-window.cpp  main-window.hpp  main-window.ui
source/views/components/: cursor-button-component.cpp  (+24 more)
tests/: CMakeLists.txt  main.test.cpp
tests/models.test/: animated-cursor.test.cpp  static-cursor.test.cpp  static-cursor.test.hpp
tests/models.test/formats.test/: ani.test.cpp  ani.test.hpp  animated-cursor.test.cpp  animated-cursor.test.hpp  bmp.test.cpp  bmp.test.hpp  cur-ico.test.cpp  cur-ico.test.hpp  static-cursor.test.cpp  static-cursor.test.hpp
(+16 files in other folders)
